Params maxRetries and sparkConf
- make maxRetries a Runner param and set it to zero for CD tests
- make sparkConf a parameter to inject the path to the Storage Key secret
- fixed Databricks job state mapping
- some logging improvements